--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </style>
   </head>
   <body>
-    <div id="settlement-app">
+    <div id="app">
       <div class="loader"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
